PR11229: Make parse_kernel_config return int and suggest that the user check their installation of kernel devel